# GKiO-Projekt-GK

./: .gitignore  AUTHORS  README  check_cmake_filelist_client.py  codeStyle.xml  coreStyle.xml  scene.xml
cmake/: CMakeLists.txt
cmake/includes/: CompilerOptions.cmake  Controller.cmake  Directories.cmake  Libraries.cmake  Macros.cmake  VSFolders.cmake  View.cmake
src/: .project  CMakeLists.txt  GK-RayTracer.doxyfile  common.h
src/CmakeIncludes/: CompilerOptions.cmake  Directories.cmake  Macros.cmake  Model.cmake  VSFolders.cmake  View.cmake
src/Controller/: GlobalDefines.h  MainWindow.cpp  MainWindow.h  RendererThread.cpp  RendererThread.h  ThreadRunner.cpp  ThreadRunner.h  main.cpp
src/Model/: AlignedClass.h  Camera.cpp  Camera.h  Color.h  Light.h  Material.cpp  Material.h  ModelDefines.cpp  ModelDefines.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Point.h  Point2D.h  PointAndVectorOperations.h  Ray.h  RenderTileData.h  Renderer.cpp  Renderer.h  SSEData.h  SSETraits.h  Scene.cpp  Scene.h  SceneFileManager.cpp  SceneFileManager.h  Sphere.cpp  Sphere.h  Vector.h  VisibleObject.h  VpCommon.h
src/View/: ImageViewer.cpp  ImageViewer.h  MainWindow.ui
